# Multiplayer-Template

./: .dockerignore  .env.example  .gitignore  CI_CD_IMPLEMENTATION.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile.native  Dockerfile.server  Dockerfile.web  Dockerfile.world-viewer  README.md  docker-compose.yml  dynamic_objects_config.json
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy-web.yml  docker-native.yml  docker-server.yml  docker-world-viewer.yml  mdbook.yml  release.yml
GUIDES/: BAKED_ANIMATIONS_GUIDE.md  COLLISION_GUIDE.md  DEPLOYMENT.md  MESHES_GUIDE.md  SKYBOX_GUIDE.md  ZONES_GUIDE.md
apps/native/: Cargo.toml  README.md
apps/native/src/: main.rs
apps/server/: Cargo.toml  README.md
apps/server/src/: main.rs
apps/web/: Cargo.toml  README.md  Trunk.toml  index.html
apps/web/src/: main.rs
apps/world-viewer/: Cargo.toml  README.md
apps/world-viewer/src/: main.rs
assets/config/: dynamic_objects_config.json  game_camera_config.json  game_client_config.json  game_core_config.json  game_performance_config.json  game_server_config.json  game_simulation_config.json  game_world_config.json
assets/models/: example_world_collision.glb  example_world_visual.glb  example_world_zones.glb  world_dynamic.glb  world_static.glb  world_zones.glb
assets/models/characters/default/: hitbox.glb  pov_empty.glb
book/: book.toml
book/src/: SUMMARY.md  contributing.md  introduction.md
book/src/apps/: native-client.md  server.md  web-client.md  world-viewer.md
book/src/architecture/: game-camera.md  game-client.md  game-core.md  game-dynamic.md  game-networking.md  game-protocol.md  game-server.md  overview.md
book/src/config/: client.md  dynamic-objects.md  overview.md  performance.md  server.md  simulation.md  world.md
book/src/getting-started/: configuration.md  installation.md  quick-start.md
book/src/guides/: deployment.md
book/src/guides/world-dynamic/: dynamic-objects.md
book/src/guides/world-static/: baked-animations.md  baked-lighting.md  baked-shadows.md  getting-started.md  lighting.md  materials.md  meshes.md  skybox.md
book/src/guides/world-zones/: collision.md  zones.md
book/src/tools/: bake-skybox-cubemap.md  glb-parser.md  infra-test.md
certificates/: cert.pem  digest.txt  key.pem
crates/game-camera/: Cargo.toml
crates/game-camera/src/: config.rs  lib.rs  plugin.rs
crates/game-client/: Cargo.toml  README.md
crates/game-client/src/: animation_plugin.rs  app.rs  character.rs  character_rendering.rs  client.rs  client_config.rs  client_skybox_plugin.rs  cursor_plugin.rs  diagnostics.rs  dynamic_rendering.rs  input_device.rs  input_plugin.rs  lib.rs  lifecycle_plugin.rs  movement.rs  prediction.rs  prediction_plugin.rs  projectile_cosmetics_plugin.rs  renderer.rs  transport.rs  visual_interpolation_plugin.rs
crates/game-core/: Cargo.toml  README.md
crates/game-core/src/: config.rs  core_config.rs  lib.rs  lighting.rs  lightmaps.rs  performance_config.rs  protocol.rs  shared.rs  simulation_config.rs  skybox.rs  world.rs  world_config.rs
crates/game-core/src/character/: components.rs  hitbox_loader.rs  mod.rs
crates/game-core/src/common/: cli.rs  client.rs  mod.rs  server.rs  shared.rs
crates/game-core/src/dynamic/: actions.rs  debug.rs  events.rs  light_effects.rs  loader.rs  mesh_effects.rs  mod.rs  processor.rs  triggers.rs  types.rs
crates/game-core/src/movement/: client.rs  mod.rs  server.rs
crates/game-core/src/networking/: config.rs  mod.rs  protocol.rs  rollback.rs  settings.rs  shared.rs
crates/game-core/src/player/: components.rs  hitbox_loader.rs  mod.rs
crates/game-core/src/utils/: cli.rs  config_hot_reload.rs  config_loader.rs  mod.rs
crates/game-core/src/world/: collision_debug.rs  loader.rs  mod.rs  processor.rs  tests.rs  utils.rs
crates/game-core/src/zones/: events.rs  loader.rs  mod.rs  processor.rs  spawn_points.rs  systems.rs  zone_debug.rs  zones.rs
crates/game-diagnostics/: Cargo.toml
crates/game-diagnostics/src/: lib.rs  metrics.rs  overlay.rs  server_log.rs  thresholds.rs
crates/game-dynamic/: Cargo.toml  README.md
crates/game-dynamic/src/: actions.rs  debug.rs  lib.rs  light_effects.rs  loader.rs  mesh_effects.rs  processor.rs  triggers.rs  types.rs
crates/game-networking/: Cargo.toml  README.md
crates/game-networking/src/: config.rs  lib.rs  movement.rs  movement_plugin.rs  projectile_plugin.rs  protocol.rs  rollback.rs  rollback_plugin.rs
crates/game-networking/src/replication/: mod.rs  player.rs  projectile.rs
crates/game-protocol/: Cargo.toml  README.md
crates/game-protocol/src/: lib.rs
crates/game-server/: Cargo.toml  README.md
crates/game-server/src/: app.rs  diagnostics.rs  lib.rs  movement.rs  server.rs  server_config.rs  spawning.rs  transport.rs
examples/avian_3d_character/src/: client.rs  server.rs
scripts/: bake_skybox_cubemap.py
tools/bake_skybox_cubemap/: bake_skybox_cubemap.py
tools/glb-parser/: Cargo.toml
tools/glb-parser/src/: main.rs
tools/infra-test/: docker-compose.yml  run.sh
tools/infra-test/grafana/dashboards/: load-test.json
