[workspace]
resolver = "2"
members = [
    "crates/game-core",
    "crates/game-networking",
    "crates/game-client",
    "crates/game-server",
    "crates/game-camera",
    "apps/server",
    "apps/native",
    "apps/web",
    "apps/world-viewer",
    "tools/glb-parser",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93"
authors = ["Ben Davies <bendavies600@gmail.com>"]
license = "MIT"
repository = "https://github.com/BenDavies1218/Multiplayer-Template"

[workspace.dependencies]
# Internal crates
game-core = { path = "crates/game-core" }
game-networking = { path = "crates/game-networking" }
game-client = { path = "crates/game-client" }
game-server = { path = "crates/game-server" }
game-camera = { path = "crates/game-camera" }

# External dependencies - versions shared across all crates
bevy = { version = "0.18", default-features = false }
lightyear = { version = "0.26.4", default-features = false }
lightyear_frame_interpolation = "0.26.4"
avian3d = { version = "0.5", default-features = false }
leafwing-input-manager = { version = "0.20", default-features = false }
serde = { version = "1", default-features = false }
clap = { version = "4.5.4", features = ["derive"] }
tracing = "0.1.40"
async-compat = "0.2"
cfg-if = "1.0"
dotenvy = "0.15"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

# Docker-optimized profile: faster builds, lower memory usage
# Uses thin LTO (50% faster, 60% less memory) instead of full LTO
# Trade-off: ~5-10% larger binary, but builds successfully in CI
[profile.docker]
inherits = "release"
lto = "thin"           # Thin LTO instead of full (much lower memory)
codegen-units = 16     # Parallel codegen (lower memory per unit)
opt-level = 3          # Still optimize code
strip = "debuginfo"    # Strip debug info to reduce size
