[package]
name = "game-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[features]
default = ["client", "gui"]
client = []
server = []
gui = []

[dependencies]
# Workspace dependencies
bevy = { workspace = true, features = [
    "bevy_state",
    "serialize",
] }
lightyear = { workspace = true, features = [
    "client",
    "server",
    "interpolation",
    "prediction",
    "replication",
    "leafwing",
    "avian3d",
    "webtransport",
    "webtransport_self_signed",
    "webtransport_dangerous_configuration",
    "websocket",
    "websocket_self_signed",
    "netcode",
    "udp",
] }
lightyear_frame_interpolation.workspace = true
avian3d = { workspace = true, features = [
    "3d",
    "f32",
    "parry-f32",
    "parallel",
    "serialize",
] }
leafwing-input-manager = { workspace = true, features = [
    "keyboard",
    "gamepad",
] }
serde = { workspace = true, features = ["alloc", "derive"] }
clap.workspace = true
cfg-if.workspace = true
tracing.workspace = true
async-compat.workspace = true
dotenvy.workspace = true

[target."cfg(not(target_family = \"wasm\"))".dependencies]
bevy = { workspace = true, features = ["x11"] }

[target."cfg(target_family = \"wasm\")".dependencies]
console_error_panic_hook = "0.1.7"
rand = "0.9"
getrandom = { version = "0.2", features = ["js"] }
