[package]
name = "game-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
# Workspace dependencies
bevy = { workspace = true, features = [
    "bevy_state",
    "serialize",
    "bevy_gltf",
    "bevy_pbr",
    "bevy_render",
    "bevy_scene",
    "bevy_core_pipeline",
    "bevy_mesh",
    "bevy_light",
    "bevy_camera",
] }
lightyear = { workspace = true, features = [
    "client",
    "server",
    "interpolation",
    "prediction",
    "replication",
    "leafwing",
    "avian3d",
] }
lightyear_frame_interpolation.workspace = true
avian3d = { workspace = true, features = [
    "3d",
    "f32",
    "parry-f32",
    "parallel",
    "serialize",
] }
leafwing-input-manager = { workspace = true, features = [
    "keyboard",
    "gamepad",
] }
serde = { workspace = true, features = ["alloc", "derive"] }
serde_json = "1"
clap.workspace = true
cfg-if.workspace = true
tracing.workspace = true
dotenvy.workspace = true

[target."cfg(not(target_family = \"wasm\"))".dependencies]
bevy = { workspace = true, features = ["x11"] }

[target."cfg(target_family = \"wasm\")".dependencies]
rand = "0.9"
getrandom = { version = "0.2", features = ["js"] }
