[package]
name = "game-networking"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
# Internal
game-core.workspace = true

# Workspace dependencies
bevy = { workspace = true, features = [
    "bevy_state",
    "serialize",
] }
lightyear = { workspace = true, features = [
    "client",
    "server",
    "interpolation",
    "prediction",
    "replication",
    "leafwing",
    "avian3d",
] }
avian3d = { workspace = true, features = [
    "3d",
    "f32",
    "parry-f32",
    "parallel",
    "serialize",
] }
leafwing-input-manager = { workspace = true, features = [
    "keyboard",
    "gamepad",
    "mouse",
] }
serde = { workspace = true, features = ["alloc", "derive"] }
dotenvy.workspace = true
tracing.workspace = true
