[package]
name = "game-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
bevy = { workspace = true, features = [
    "bevy_state",
    "serialize",
] }
lightyear = { workspace = true, features = [
    "replication",
    "leafwing",
] }
leafwing-input-manager = { workspace = true, features = [
    "keyboard",
    "gamepad",
    "mouse",
] }
serde = { workspace = true, features = ["alloc", "derive"] }
