[package]
name = "game-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[dependencies]
# Internal
game-core = { path = "../game-core", default-features = false, features = ["server"] }

# Workspace dependencies
bevy = { workspace = true, features = [
    "bevy_state",
    "bevy_log",
    "serialize",
    "multi_threaded",
] }
lightyear = { workspace = true, features = [
    "server",
    "prediction",
    "replication",
    "leafwing",
    "avian3d",
    "webtransport",
    "webtransport_self_signed",
    "webtransport_dangerous_configuration",
    "websocket",
    "websocket_self_signed",
] }
avian3d = { workspace = true, features = [
    "3d",
    "f32",
    "parry-f32",
    "parallel",
    "serialize",
] }
leafwing-input-manager = { workspace = true, features = [
    "keyboard",
    "gamepad",
] }
serde = { workspace = true, features = ["alloc", "derive"] }
tracing.workspace = true
async-compat.workspace = true
