[package]
name = "glb-parser"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
publish = false

[[bin]]
name = "glb-parser"
doc = false

[dependencies]
serde = { workspace = true, features = ["alloc", "derive"] }
serde_json = "1"
clap = { workspace = true }
